Change z index of icon so it sits behind fixed menu at top

--- a/app/assets/stylesheets/darkswarm/active_table_search.css.sass
+++ b/app/assets/stylesheets/darkswarm/active_table_search.css.sass
@@ -8,7 +8,7 @@
     left: 26px
     top: 12px
     font-size: 1.6em
-    z-index: 999
+    z-index: 2
     color: #b2b2b2
   
   input[type="text"]
